--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
 
                 <li class="portfolio-link">
                     <a href="">
-                        <img src="../images/restaurant-3.jpg" alt="Додаток ресторану морської їжї">
+                        <img src="/images/restaurant-3.jpg" alt="Додаток ресторану морської їжї">
                         <h3 class="portfolio-title">Ресторан Seafood</h3>
                         <p class="categoray">Додаток</p>
                     </a>
