--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
 
                 <li class="portfolio-link">
                     <a href="">
-                        <img src="../images/web-1.jpg" alt="Назва компанії Технокряк">
+                        <img src="./images/web-1.jpg" alt="Назва компанії Технокряк">
                         <h3 class="portfolio-title">Технокряк</h3>
                         <p class="categoray">Веб-сайт</p>
                     </a>
@@ -91,7 +91,7 @@
 
                 <li class="portfolio-link">
                     <a href="">
-                        <img src="../images/poster-2.jpg" alt="Постер дизайну" width="370" height="294">
+                        <img src="./images/poster-2.jpg" alt="Постер дизайну" width="370" height="294">
                         <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
                         <p class="categoray">Дизайн</p>
                     </a>
@@ -100,7 +100,7 @@
 
                 <li class="portfolio-link">
                     <a href="">
-                        <img src="/images/restaurant-3.jpg" alt="Додаток ресторану морської їжї">
+                        <img src="./images/restaurant-3.jpg" alt="Додаток ресторану морської їжї">
                         <h3 class="portfolio-title">Ресторан Seafood</h3>
                         <p class="categoray">Додаток</p>
                     </a>
@@ -109,7 +109,7 @@
 
                 <li class="portfolio-link">
                     <a href="">
-                        <img src="../images/project-4.jpg" alt="Проєкт Prime">
+                        <img src="./images/project-4.jpg" alt="Проєкт Prime">
                         <h3 class="portfolio-title">Проєкт Prime</h3>
                         <p class="categoray">Маркетинг</p>
                     </a>
@@ -118,7 +118,7 @@
 
                 <li class="portfolio-link">
                     <a href="">
-                        <img src="../images/project-5.jpg" alt="Проєкт додатку Боксес">
+                        <img src="./images/project-5.jpg" alt="Проєкт додатку Боксес">
                         <h3 class="portfolio-title">Проєкт Boxes</h3>
                         <p class="categoray">Додаток</p>
 
@@ -127,7 +127,7 @@
 
                 <li class="portfolio-link">
                     <a href="">
-                        <img src="../images/web-6.jpg" alt="Лого сайту">
+                        <img src="./images/web-6.jpg" alt="Лого сайту">
                         <h3 class="portfolio-title">Inspiration has no Borders</h3>
                         <p class="categoray">Веб-сайт</p>
                     </a>
@@ -136,7 +136,7 @@
 
                 <li class="portfolio-link">
                     <a href="">
-                        <img src="../images/design-7.jpg" alt="">
+                        <img src="./images/design-7.jpg" alt="">
                         <h3 class="portfolio-title">Видання Limited Edition</h3>
                         <p class="categoray">Дизайн</p>
                     </a>
@@ -145,7 +145,7 @@
 
                 <li class="portfolio-link">
                     <a href="">
-                        <img src="../images/marketing-8.jpg" alt="Проєкт маркетингу ЛАБ">
+                        <img src="./images/marketing-8.jpg" alt="Проєкт маркетингу ЛАБ">
                         <h3 class="portfolio-title">Проєкт LAB</h3>
                         <p class="categoray">Маркетинг</p>
                     </a>
@@ -154,7 +154,7 @@
 
                 <li class="portfolio-link">
                     <a href="">
-                        <img src="../images/add-9.jpg" alt=" Додаток проекту бізнесу">
+                        <img src="./images/add-9.jpg" alt=" Додаток проекту бізнесу">
                         <h3 class="portfolio-title">Growing Business</h3>
                         <p class="categoray">Додаток</p>
                     </a>
