--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
             <div class="wrapp">
                 <h2 class="title">Чим ми займаємося</h2>
                 <ul class="list-box">
-                    <li class="section-list"><img src="/images/box_1.jpg" alt="Написання алгоритму коду" height="295"
+                    <li class="section-list"><img src="./images/box_1.jpg" alt="Написання алгоритму коду" height="295"
                             width="370"></li>
-                    <li class="section-list"><img src="/images/box_2.jpg" alt="Розробка мобільного дизайну" height="295"
+                    <li class="section-list"><img src="./images/box_2.jpg" alt="Розробка мобільного дизайну" height="295"
                             width="370"></li>
-                    <li class="section-list"><img src="/images/box_3.jpg" alt="Людина підбирає кольри для проєкту"
+                    <li class="section-list"><img src="./images/box_3.jpg" alt="Людина підбирає кольри для проєкту"
                             height="295" width="370">
                     </li>
                 </ul>
@@ -115,25 +115,25 @@
 
                 <ul class="list-box">
                     <li class="section-list list-size">
-                        <img src="/images/ihor.jpg" alt="Ігор Дем'яненко" height="260" width="270">
+                        <img src="./images/ihor.jpg" alt="Ігор Дем'яненко" height="260" width="270">
                         <h3 class="title-team">Ігор Дем'яненко</h3>
                         <p class="team-job">Product Designer</p>
                     </li>
 
                     <li class="section-list">
-                        <img src="/images/olga.jpg" alt="Ольга Рєпіна" height="260" width="270">
+                        <img src="./images/olga.jpg" alt="Ольга Рєпіна" height="260" width="270">
                         <h3 class="title-team">Ольга Рєпіна</h3>
                         <p class="team-job">Frontend Developer</p>
                     </li>
 
                     <li class="section-list">
-                        <img src="/images/kola.jpg" alt="Микола Тарасов" height="260" width="270">
+                        <img src="./images/kola.jpg" alt="Микола Тарасов" height="260" width="270">
                         <h3 class="title-team">Микола Тарасов</h3>
                         <p class="team-job">Marketing</p>
                     </li>
 
                     <li class="section-list">
-                        <img src="/images/mihail.jpg" alt="Михайло Єрмаков" height="260" width="270">
+                        <img src="./images/mihail.jpg" alt="Михайло Єрмаков" height="260" width="270">
                         <h3 class="title-team">Михайло Єрмаков</h3>
                         <p class="team-job">UI Designer</p>
 
